Closed Bug 1719872 Opened 3 years ago Closed 3 years ago

Dialog submission triggered by form.submit() in submit button click handler should not be deferred

Categories

(Core :: DOM: Forms, defect, P2)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: edgar, Assigned: edgar)

References

Details

Attachments

(2 files)

This is a follow up of https://phabricator.services.mozilla.com/D119396#3885882.
Dialog submission won't cause navigation, and per https://html.spec.whatwg.org/multipage/form-control-infrastructure.html#submit-dialog, the steps of submitting dialog happens synchronously.

Assignee: nobody → echen
Severity: -- → S3
Priority: -- → P2
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1a9ece0f6337 Dialog submission triggered by form.submit() in click handler of submit button should not be deferred; r=smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/29640 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: